--- a/style.css
+++ b/style.css
@@ -71,9 +71,18 @@ li:first-child{
     color: violet;
 }
 
-**/
+
 
 
 li:last-child{
     color: violet;
 }
+
+**/
+
+/** :nth-child and give numbers  **/
+
+li:nth-child(2) {
+    color: violet;
+}
+
